Fixed leaderboards overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -685,7 +685,6 @@ table {
     border: 1px solid #999;
     padding: 0.5rem;
     text-align: center;
-    font-size: 20px;
     /*
     padding: 8px;
     */
